# WavePart-python

./: .gitignore  README.md  partition.m  pyproject.toml
reports/: matlab_python_comparison.typ
scripts/: export_matlab_comparison.m  export_python_comparison.py  export_sample_figures.py  generate_oracles.py
src/wavepart/: __init__.py  cli.py  core.py  io.py  params.py  plotting.py  types.py  wind.py
tests/: test_cli.py  test_invariants.py  test_plotting.py  test_reference.py
tests/fixtures/: reference_outputs.mat  reference_outputs.npz
