[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavepart"
version = "0.1.0"
description = "Python packaging shell for directional wave spectrum partitioning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "J.C. Vaught", email = "jvaught@sc.edu" },
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.7",
]
xarray = [
  "xarray>=2024.1",
]
dev = [
  "pytest>=8",
]

[project.scripts]
wavepart = "wavepart.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
