[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavepart"
version = "0.1.0"
description = "Python package for directional wave spectrum partitioning."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "j-vaught", email = "jvaught@sc.edu"}
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11"
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.8"
]
xarray = [
  "xarray>=2024.1"
]
dev = [
  "pytest>=8.0"
]

[project.scripts]
wavepart = "wavepart.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
